fix deathly ranger & abyssal portal mage scaling, and convert to using a set for cox checks