@@ -30,10 +30,12 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import javax.inject.Inject;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
@@ -151,7 +153,7 @@ public class DefenceTrackerPlugin extends Plugin
 
 	private final List<SpecialCounterUpdate> specialList = new ArrayList<>();
 
-	Map<String, ArrayList<Integer>> bossRegions = new HashMap<String, ArrayList<Integer>>()
+	Map<String, ArrayList<Integer>> bossRegions = new HashMap<>()
 	{{
 		put("The Maiden of Sugadinti", new ArrayList<>(Collections.singletonList(12613)));
 		put("Pestilent Bloat", new ArrayList<>(Collections.singletonList(13125)));
@@ -177,7 +179,8 @@ public class DefenceTrackerPlugin extends Plugin
 		put("Zulrah", new ArrayList<>(Arrays.asList(9007, 9008)));
 	}};
 
-	private final List<String> coxBosses = Arrays.asList("Abyssal portal", "Deathly mage", "Deathly ranger", "Great Olm", "Great Olm (Left claw)", "Great Olm (Right claw", "Ice demon", "Skeletal Mystic", "Tekton", "Vasa Nistirio", "Lizardman shaman");
+	private final Set<String> coxBosses = new HashSet<>(List.of("Abyssal portal", "Deathly mage", "Deathly ranger", "Great Olm", "Great Olm (Left claw)", "Great Olm (Right claw", "Ice demon", "Skeletal Mystic", "Tekton", "Vasa Nistirio", "Lizardman shaman"));
+  private final Set<String> coxBossesSpecialOffensiveScaling = new HashSet<>(List.of("Abyssal portal", "Deathly ranger"));
 
 	@Provides
 	DefenceTrackerConfig provideConfig(ConfigManager configManager)
@@ -547,7 +550,14 @@ public class DefenceTrackerPlugin extends Plugin
 		if (coxBosses.contains(boss))
 		{
 			int partySize = getCoxPartySize();
-			scaledMagicLevel = scaledMagicLevel * (((int) (Math.sqrt(partySize - 1))) * 7 + partySize + 99) / 100;
+			if (coxBossesSpecialOffensiveScaling.contains(boss))
+			{
+				scaledMagicLevel = (int) (scaledMagicLevel * (((int) Math.sqrt(partySize - 1) + ((partySize - 1) * 7 / 10 + 100)) / 100.0));
+			}
+			else
+			{
+				scaledMagicLevel = scaledMagicLevel * (((int) (Math.sqrt(partySize - 1))) * 7 + partySize + 99) / 100;
+			}
 			if (inCm)
 			{
 				scaledMagicLevel = (int) (1.5 * scaledMagicLevel);
